#JC-83 #JC-85 #JC-87 fix